feat(db): :sparkles: Corrige erros de compilação no mapeamento com o banco
Signed-off-by: Beatriz Albuquerque <beatrizacbs@gmail.com>